Einige Korrekturen in URLs